feat: 画像アップロード機能を追加

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,3 +12,7 @@ body
   padding-bottom: 9px
   margin: 40px 0 20px
   border-bottom: 1px solid #eeeeee
+
+// Bootstrap4には中間に配置するためのクラスがないため自前で定義する
+.card-img-middle
+  width: 100%
