--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -6,4 +6,7 @@
   = f.input :noted_at, html5: true
   = f.input :detail, hint: "#{Note::DETAIL_LENGTH_MAXIMUM}文字まで入力できます",
     input_html: {rows: 10}
+  = f.input :picture, as: :file,
+    hint: "#{number_to_human_size(PictureUploader::SIZE_LIMIT)}までアップロードできます"
+  = f.input :remove_picture, as: :boolean if @note.picture?
   = f.button :submit, class: 'btn-primary'
