refactor: からだ選択モーダルダイアログのルーティングを、collectionでネストするようにして整理
See:
https://github.com/bellwood4486/karada-memo/pull/58#discussion_r226594188

--- a/app/views/bodies/select.js.erb
+++ b/app/views/bodies/select.js.erb
@@ -2,7 +2,7 @@
 
 {
   document.getElementById('bodySelectionsModalArea').innerHTML =
-    "<%= j render 'selection_modal' %>"
+    "<%= j render 'select_modal' %>"
 
   const bodyNote = document.getElementById('bodySelection')
   bodyNote.addEventListener('change', function () {
