--- a/app/views/bodies/select_nobody.js.erb
+++ b/app/views/bodies/select_nobody.js.erb
@@ -2,6 +2,6 @@
 
 {
   document.getElementById('bodySelectionsModalArea').innerHTML =
-    "<%= j render 'nobody_modal' %>"
+    "<%= j render 'select_nobody_modal' %>"
   $('#noBodyModal').modal('show')
 }
