--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -18,9 +18,7 @@
             = link_to bodies_path, class: 'nav-link' do
               = fa_icon 'sticky-note', text: 'メモを見る'
           %li.nav-item
-            = link_to bodies_selections_path, remote: true,
-              class: 'nav-link btn btn-primary text-light', role: 'button' do
-              = fa_icon 'edit', text: 'メモする'
+            = new_note_header_link(current_user.family.bodies)
           %li.nav-item.dropdown
             %a#navbar-dropdown.nav-link.dropdown-toggle{href: '#', 'data-toggle': 'dropdown', role: 'button', 'aria-haspopup': 'true', 'aria-expanded': 'false'}
               = current_user.nickname
