--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -7,6 +7,6 @@
   = f.input :detail, hint: "#{Note::DETAIL_LENGTH_MAXIMUM}文字まで入力できます",
     input_html: {rows: 10}
   = f.input :picture, as: :file,
-    hint: "#{number_to_human_size(PictureUploader::SIZE_LIMIT)}までアップロードできます"
+    hint: "#{number_to_human_size(PictureUploader::SIZE_LIMIT)}までアップロードできます", input_html: { data: { limit_size: PictureUploader::SIZE_LIMIT } }
   = f.input :remove_picture, as: :boolean if @note.picture?
   = f.button :submit, class: 'btn-primary'
